--- a/install
+++ b/install
@@ -10,9 +10,15 @@ apt -y install screen strace
 # create xmr-stak autostart file
 cat > /etc/init.d/xmr-stak << EOF
 #!/bin/bash
-# chkconfig: 345 99 10
-# description: Stratumos autostart
-#
+# Provides: System Sixty Six 
+# Required-Start:    $local_fs $network
+# Required-Stop:     $local_fs $remote_fs
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: xmr-stak autostart
+# Description:       xmr-stak autostart
+### END INIT INFO
+
 case "$1" in
 	'start')
 	/usr/bin/screen -dmS xmr-stak xmr-stak --config /stratumos/xmr-stak/config.txt --poolconf /stratumos/xmr-stak/pools.txt &;;
