--- a/install
+++ b/install
@@ -10,10 +10,11 @@ apt -y install screen strace
 # create xmr-stak autostart file
 cat > /etc/init.d/xmr-stak << EOF
 #!/bin/bash
+# chkconfig 235 99 10
 ### BEGIN INIT INFO
 # Provides: System Sixty Six 
-# Required-Start:    $local_fs $network
-# Required-Stop:     $local_fs $remote_fs
+# Required-Start:    $local_fs $network $syslog
+# Required-Stop:     $local_fs
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
 # Short-Description: xmr-stak autostart
@@ -41,5 +42,3 @@ chmod +x /etc/init.d/xmr-stak
 update-rc.d xmr-stak defaults
 update-rc.d xmr-stak enable
 
-
- 
